<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/home"
        android:title="@string/home_bottom_nav" />
    <item
        android:id="@+id/savedProducts"
        android:enabled="true"
        android:icon="@drawable/heart"
        android:title="@string/saved_bottom_nav" />
    <item
        android:id="@+id/cart"
        android:enabled="true"
        android:icon="@drawable/cart"
        android:title="@string/cart_bottom_nav" />
    <item
        android:id="@+id/notification"
        android:enabled="true"
        android:icon="@drawable/bell"
        android:title="@string/notifications_bottom_nav" />
    <item
        android:id="@+id/user"
        android:enabled="true"
        android:icon="@drawable/user"
        android:title="@string/account_bottom_nav" />
</menu>